Funciona el algoritmo de equidad con un codigo ejemplo en main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,4 +12,6 @@ add_executable(Proyecto1_Operativos
     scheduler.c
     scheduler.h
     planner.c
-    planner.h)
+    planner.h
+    flow_equity.c
+    flow_equity.h)
