--- a/src/street/street.config
+++ b/src/street/street.config
@@ -1,8 +1,9 @@
-length=5
-c_schedule=1
-queuelength=30
-t_schedule=1
-W=2
-speed=1,2,4
-left=2,2,0
-right=2,2,0
+length=5            # Tamaño de la calle principal
+c_schedule=2        # 1:Equidad (W carros cada lado) 2:Letrero (cambia dirección con tiempo) 3:FIFO
+queuelength=30      # Cola de espera - cantidad máxima de carros en espera en cada extremo
+t_schedule=4        # 1:FCFS 2:SJF 3:Prioridad 4:RR 5:Tiempo Real
+time=10 
+W=2                 # c_schedule=1 -> W_cantidad de carros para cambio de dirección
+speed=1,2,4         # Velocidad carro normal, deportivo, ambulancia
+left=2,2,0          # Config cola izquierda: normal, deportivo, ambulancia
+right=2,2,0         # Config cola derecha: normal, deportivo, ambulancia
