--- a/src/street/street.config
+++ b/src/street/street.config
@@ -1,8 +1,8 @@
 length=5            # Tamaño de la calle principal
-c_schedule=2        # 1:Equidad (W carros cada lado) 2:Letrero (cambia dirección con tiempo) 3:FIFO
+c_schedule=3        # 1:Equidad (W carros cada lado) 2:Letrero (cambia dirección con tiempo) 3:FIFO
 queuelength=30      # Cola de espera - cantidad máxima de carros en espera en cada extremo
 t_schedule=5        # 1:FCFS 2:SJF 3:Prioridad 4:RR 5:Tiempo Real
-time=10 
+# time=10 
 # W=2                 # c_schedule=1 -> W_cantidad de carros para cambio de dirección
 speed=1,2,4         # Velocidad carro normal, deportivo, ambulancia
 left=2,2,0          # Config cola izquierda: normal, deportivo, ambulancia
